# autarkie

./: .gitignore  Cargo.toml  ENHANCEMENTS.md  README.md
.github/workflows/: rbpf-fuzzer-build.yml  sql-fuzzer-build.yml
autarkie/: Cargo.toml  rustc-ice-2025-05-19T09_48_27-1793229.txt
autarkie/benches/: mutators.rs
autarkie/src/: graph.rs  lib.rs  scale.rs  serde.rs  tree.rs  visitor.rs
autarkie/src/fuzzer/: afl.rs  context.rs  fuzzer.rs  libfuzzer.rs  macros.rs  mod.rs  monitor.rs
autarkie/src/fuzzer/feedback/: crash_info.rs  ijon.rs  mod.rs  register.rs
autarkie/src/fuzzer/hooks/: mod.rs  rare_share.rs
autarkie/src/fuzzer/mutators/: commons.rs  generate_append.rs  iterable_pop.rs  mod.rs  random.rs  recurse.rs  recurse_mutate.rs  splice.rs  splice_append.rs  vecu8.rs
autarkie/src/fuzzer/stages/: afl.rs  autarkie_cmp.rs  binary_mutator.rs  cmp.rs  generate.rs  libfuzzer_cmp.rs  minimization.rs  mod.rs  mutating.rs  mutational.rs  novelty_minimization.rs  recursive_minimization.rs  stability.rs  stats.rs
autarkie/tests/ijon_e2e/: .gitignore  README.md  ijon_target.c  run.sh  slot_of.c
autarkie/tests/ijon_e2e/fuzzer/: Cargo.toml
autarkie/tests/ijon_e2e/fuzzer/src/: main.rs
autarkie_derive/: Cargo.toml
autarkie_derive/src/: lib.rs  trait_bounds.rs  utils.rs
autarkie_libfuzzer/: Cargo.toml  build.rs
autarkie_libfuzzer/runtime/: Cargo.toml.template
autarkie_libfuzzer/runtime/src/: fuzz.rs
autarkie_libfuzzer_runtime/: Cargo.toml  build.sh  src
autarkie_test/: Cargo.toml
autarkie_test/src/: lib.rs
autarkie_test/tests/: derive_ui.rs
autarkie_test/tests/ui/fail/: union_type.rs  union_type.stderr
autarkie_test/tests/ui/pass/: attr_literal.rs  attr_no_mutate.rs  attr_range.rs  complex_recursive.rs  enum_mixed.rs  enum_named.rs  enum_unit.rs  enum_unnamed.rs  enum_with_struct.rs  recursive_box.rs  recursive_indirect.rs  recursive_option.rs  recursive_vec.rs  struct_named.rs  struct_nested.rs  struct_unnamed.rs  struct_with_collections.rs
guides/: rbpf.md  sql.md
libafl-fuzzer/: Cargo.toml
libafl-fuzzer/src/: context.rs  lib.rs
libafl-fuzzer/src/feedback/: register.rs
libafl-fuzzer/src/mutators/: commons.rs  mod.rs  recurse_mutate.rs  splice.rs  splice_append.rs
libafl-fuzzer/src/stages/: cmp.rs  deterministic.rs  generate.rs  minimization.rs  mod.rs  recursive_minimization.rs
libafl_libfuzzer/: Cargo.toml  build.rs
libafl_libfuzzer/runtime/: Cargo.toml.template
libafl_libfuzzer/runtime/src/: fuzz.rs  lib.rs
libafl_libfuzzer/src/: lib.rs
libfuzzer/libafl_libfuzzer/: Cargo.toml  README.md  build.rs
libfuzzer/libafl_libfuzzer/runtime/: Cargo.toml.template  build.rs
libfuzzer/libafl_libfuzzer/runtime/src/: lib.rs
libfuzzer/libafl_libfuzzer/src/: lib.rs
rl-bandit/: Cargo.toml  README.md
rl-bandit/src/: bandit.rs  lib.rs
rl-bandit/src/bandits/: egreedy.rs  mod.rs  stochastic_gradient.rs  ucb.rs
thesis/: Cargo.toml
thesis/src/: lib.rs  tree.rs  visitor.rs
thesis_derive/: Cargo.toml
thesis_derive/src/: lib.rs  trait_bounds.rs  utils.rs
