[workspace]
edition = "2021"

members = [
	"autarkie", 
	"autarkie_derive", 
	"autarkie_test",
	"libafl_libfuzzer",
	"libafl_libfuzzer_runtime",
]

[workspace.dependencies]
libafl = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "08026740b03c1bcf271983af16eb817ac1ad0e03", features = ["errors_backtrace"]}
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "08026740b03c1bcf271983af16eb817ac1ad0e03"}
libafl_targets = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "08026740b03c1bcf271983af16eb817ac1ad0e03", default-features = false, features = ["pointer_maps", "sancov_8bit", "cmplog"] }
