[workspace]
edition = "2021"

members = [
	"autarkie", 
	"autarkie_derive", 
	"autarkie_test",
	"autarkie_libfuzzer_runtime",
	"autarkie_libfuzzer",
]

[workspace.dependencies]
libafl = { version = "0.15.4"}
libafl_bolts = { version = "0.15.4" }
libafl_targets = { version = "0.15.4", default-features = false}
