[package]
name = "autarkie"
version = "0.1.0"
edition = "2021"

[dependencies]
# different encodings
bincode = { version = "1.3.3"}
serde = { version = "1.0.0", features = ["derive"] }

autarkie_derive = {path = "../autarkie_derive", optional = true}

libafl = {workspace = true}
libafl_bolts = {workspace = true}
libafl_targets = {workspace = true}
blake3 = "1.5.5"
colored = "3.0.0"
petgraph = "0.7.1"
clap = { version = "4.5.20", features = ["derive"] }

regex = "1.11.1"
num-traits = "0.2.19"
serde_json = "1.0.140"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempdir = "0.3.7"

[[bench]]
name = "mutators"
harness = false

[features]
derive = ["autarkie_derive"]
introspection = ["libafl/introspection"]
libfuzzer = [] 
afl = []
debug_mutators = []
fuzzbench = []
