[package]
name = "autarkie"
version = "0.1.0"
edition = "2021"

[dependencies]
# different encodings
bincode = { version = "1.3.3"}
serde = { version = "1.0.0", features = ["derive"] }

autarkie_derive = {path = "../autarkie_derive", optional = true}

libafl = {workspace = true}
libafl_bolts = {workspace = true}
libafl_targets = {workspace = true}
colored = "3.0.0"
petgraph = "0.7.1"
clap = { version = "4.5.20", features = ["derive"] }

regex = "1.11.1"
num-traits = "0.2.19"
serde_json = "1.0.140"
twox-hash = "2.1.1"
blake3 = "1.8.2"
parity-scale-codec = { version = "3.7.5", optional = true, features = ["serde", "derive"]}
ratatui = "0.29.0"
crossterm = "0.29.0"
libc = "0.2.175"
rl-bandit = {path = "../rl-bandit"}
backtrace-on-stack-overflow = "0.3.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempdir = "0.3.7"

[[bench]]
name = "mutators"
harness = false

[features]
derive = ["autarkie_derive"]
introspection = ["libafl/introspection"]
libfuzzer = []
afl = []
debug_mutators = []
fuzzbench = []
scale = ["dep:parity-scale-codec"]
