[package]
name = "autarkie_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
blake3 = "1.5.4"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ['derive', 'full', 'visit', 'parsing', 'extra-traits'] }

# different encodings
bincode = {version = "1.3.3"}
serde = { version = "1.0.215", features = ["derive"], optional = true }
proc-macro-crate = "3.1.0"
