[package]
name = "autarkie_derive"
version = "0.2.0"
edition = "2021"
description = "autarkie's marco to generate grammar"
license = 'Apache-2.0'

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ['derive', 'full', 'visit', 'parsing', 'extra-traits'] }
