[package]
name = "libafl-fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
libafl = {workspace = true}
libafl_targets = {workspace = true}
libafl_bolts = {workspace = true}
serde = { version = "1.0.214", features = ["derive"] }
autarkie = {path = "../autarkie", features=["derive"]}
blake3 = "1.5.4"
parity-scale-codec = { version = "3.6.12", features = ["derive"], optional = true }

borsh = { version = "1.5.3", features = ["derive"], optional = true }
bincode = {version = "1.3.3", optional = true}
regex = "1.11.1"
num-traits = "0.2.19"

[features]
bincode = ["dep:bincode", "autarkie/bincode"]
scale = ["dep:parity-scale-codec", "autarkie/scale"]
borsh = ["dep:borsh", "autarkie/borsh"]
