[package]
name = "rl-bandit"
version = "1.0.2"
authors = ["luc libralesso <libralesso.l@gmail.com>"]
license = "MIT"
description = "A simple multi-armed bandit implementation"
repository = "https://gitlab.com/librallu/rl-bandit"
edition = "2018"
readme = "README.md"
keywords = ["bandit", "learning", "data-structures"]
categories = ["data-structures", "algorithms", "mathematics", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
serde = { version = "1.0.228", features = ["derive"] }
