[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

[dependencies]
libafl_bolts = { git = "https://github.com/AFLplusplus/LibAFL", rev =  "95d87bd7d8e42ca4dea3da88dafa5cb5795fd3f1" }

# different encodings
bincode = {version = "1.3.3"}
serde = { version = "1.0.0", features = ["derive"]}

thesis_derive = {path = "../thesis_derive", optional = true}

[features]
derive = ["thesis_derive"]
