[package]
name = "thesis"
version = "0.1.0"
edition = "2021"

[dependencies]
libafl_bolts = { workspace = true }

# different encodings
bincode = {version = "1.3.3"}
serde = { version = "1.0.0", features = ["derive"]}

thesis_derive = {path = "../thesis_derive", optional = true}

[features]
derive = ["thesis_derive"]
